--- a/basic-bsp/css/styles.css
+++ b/basic-bsp/css/styles.css
@@ -17,27 +17,47 @@
   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-/**
- * DO NOT WORRY TOO MUCH ABOUT THIS FILE - IT'S JUST A LOAD OF BOILERPLATE CODE
- *
- * All it does is:
- *   - Set up RequireJS with all the right libraries
- *   - Loads main.js once we're done
- */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-requirejs.config({
-  baseUrl: 'js',
+* {
+  box-sizing: border-box;
+}
 
-  paths: {
-    'glMatrix': '../lib/glMatrix/gl-matrix'
-  },
-  packages: []
-});
+html, body {
+  width: 100%;
+  height: 100%;
 
-requirejs([
-],
-function() {
+  padding: 10px;
+  margin: 0;
+  border: 0;
 
-  require(['main']);
+  font-family: 'Open Sans', sans-serif;
+}
 
-});
+canvas {
+  border: solid black 2px;
+  float: left;
+}
+
+#text {
+  overflow: hidden;
+
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+#text button {
+  font-family: 'Open Sans', sans-serif;
+  width: 85px;
+  height: 45px;
+}
+
+#bsp-editor-settings {
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  #text {
+    clear: both;
+  }
+}
